--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Weekly log of research developments & issues." # This will show up
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
+email: "Rchiu18@uw.edu"
 #twitter_username: "twitteruser"
 github_username: "rychiu18"
 #linkedin_username: "linkedinuser"
