--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ plugins:
   - jekyll-sitemap
 
 titles_from_headings:
-  strip_title: true
-  collections: false
+  strip_title: false
+  collections: true
 
 defaults:
   - scope:
